clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/actual_multiple_mut_borrow/actual_multiple_mut_borrow.cbs
// RUN: %clang_cc1 -verify %s

// Test that actual multiple mutable borrows (where we propagate _Borrow references,
// not just read scalar values) are still correctly rejected.
// This ensures the fix for scalar reads doesn't break legitimate error detection.

typedef struct Data {
  int value;
} DATA_S;

// This should not fail
void test_actual_multiple_borrows() {
  DATA_S data = {42};
  DATA_S *_Borrow p1 = &_Mut data;
  DATA_S *_Borrow p2 = &_Mut data;
}

// This should fail: using both borrows simultaneously
void use_two_mut_borrows(DATA_S *_Borrow a, DATA_S *_Borrow b) {
  a->value = 1;
  b->value = 2;
}

void test_simultaneous_use() {
  DATA_S data = {42};
  use_two_mut_borrows(&_Mut data, &_Mut data); // expected-error {{cannot borrow `data` as mutable more than once at a time}}
                                               // expected-note@-1 {{first mut borrow occurs here}}
}

// This should fail: keeping _Borrow alive while creating another
void test_overlapping_lifetimes() {
  DATA_S data = {42};
  DATA_S *_Borrow p1 = &_Mut data; // expected-note {{first mut borrow occurs here}}
  DATA_S *_Borrow p2 = &_Mut data; // expected-error {{cannot borrow `data` as mutable more than once at a time}}
  p1->value = 10;
  p2->value = 20;
}
